update: optimize use AI